# 2025-rust-study

./: .editorconfig  .gitignore  README.md  attendance.toml  flake.nix  package.json  pnpm-lock.yaml  study.toml  toc.md
quiz/: Cargo.toml  README.md  build.rs  finish_template.html  question_template.html  template.html
quiz/question-macro/: Cargo.toml
quiz/question-macro/src/: lib.rs
quiz/questions/: 4byte_char.md  borrow.md  cache.md  cache_friendly.md  comment.md  encoding.md  error.md  for.md  format_specifier.md  if_expression.md  inline_string.md  invariant.md  macro.md  match.md  mutability.md  println.md  reference.md  size_types.md  string_representation.md  string_vs_str.md  trim.md  type1.md  type2.md  type_inference.md  variable.md  von_neumann.md
quiz/src/: lib.rs  main.rs
scripts/attendance-bot/: .env.example  README.md  package.json  tsconfig.json
scripts/attendance-bot/src/: attendance-store.ts  bot.ts  commands.ts  config.ts  index.ts  study.ts  utils.ts
scripts/member-sync/: package.json  pnpm-lock.yaml
scripts/member-sync/src/: index.ts
slides/: main.typ
