[package]
name = "study-test"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["full"] }
oauth-axum = "0.1.4"
serde = { version = "1.0.228" }
serde_json = "1.0.145"
rand = "0.9.2"
question-macro = { path = "./question-macro" }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
tower-http = { version = "0.6.7", features = ["trace"] }
