[package]
name = "study-test"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228" }
serde_json = "1.0.145"
rand = "0.9.2"
question-macro = { path = "./question-macro" }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tower-http = { version = "0.6.7", features = ["trace"] }
url = "2.5.7"
chrono = "0.4.42"
reqwest = { version = "0.12.25", features = ["json"] }